fixed bug related to dogs not showing up after purposeful error in queries

--- a/frontend/src/components/FilterPage/FilterPage.css
+++ b/frontend/src/components/FilterPage/FilterPage.css
@@ -38,6 +38,7 @@ h2.filter-page-header {
 .scroll-to-top-button {
     width: 130px;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .search-button {
