--- a/frontend/src/components/Match/Match.css
+++ b/frontend/src/components/Match/Match.css
@@ -20,6 +20,7 @@
 }
 
 .match-buttons {
+    margin-top: 20px;
     display: flex;
     justify-content: space-around;
     max-width: 500px;
@@ -33,6 +34,7 @@
 
 @media screen and (max-width: 500px) {
     .match-buttons {
+        /* margin-top: 10px; */
         margin: auto;
         justify-content: center;
         flex-direction: column;
